# Blue-Fire-Archipelago

./: .gitignore  .gitmodules  CMakeLists.txt  Known_issues.md  Planned_features.md  README.md  build_mods_shipping.bat  build_only.bat  generate_only.bat
BlueFireArchipelagoMod/: .clang-format  ArchipelagoLogic.cpp  ArchipelagoLogic.hpp  ArchipelagoManager.cpp  ArchipelagoModConfig.hpp  BlueFireArchipelagoMod.cpp  BlueFireArchipelagoMod.hpp  CMakeLists.txt  DeathLinkManager.cpp  GUIManager.cpp  GUIManager.hpp  HookManager.cpp  HookManager.hpp  ItemManager.cpp  ItemManager.hpp  LocationManager.cpp  Locations.yaml  MainMenuManager.cpp  ObjectCreateListener.cpp  ObjectCreateListener.hpp  ObjectFinder.cpp  ObjectFinder.hpp  UnrealObjectQueries.cpp  UnrealObjectQueries.hpp  dllmain.cpp  locations.json
BlueFireArchipelagoMod/Helper/: HookHelper.cpp  ObjectCreateListener.cpp  ObjectFinder.cpp  UnrealObjectQueries.cpp
BlueFireArchipelagoMod/Include/: ArchipelagoManager.hpp  ArchipelagoModConfig.hpp  BlueFireArchipelagoMod.hpp  DeathLinkManager.hpp  ItemManager.hpp  LocationManager.hpp  LocationsData.hpp  LocationsJsonParser.hpp  MainMenuManager.hpp
BlueFireArchipelagoMod/Include/Helper/: HookHelper.hpp  ObjectCreateListener.hpp  ObjectFinder.hpp  UnrealObjectQueries.hpp
BlueFireArchipelagoMod/generate_locations/: Cargo.toml
BlueFireArchipelagoMod/generate_locations/src/: main.rs
